--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
   "name": "as-button",
-  "version": "0.0.0",
+  "version": "0.0.4",
+  "keywords": [
+    "angular",
+    "buttons",
+    "css",
+    "html"
+  ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:packagr": "ng-packagr -p ng-package.json",
+    "start:pack": "cd dist && npm pack"
   },
-  "private": true,
-  "dependencies": {
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Anilk1sagar/as-button.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Anilk1sagar/as-button/issues"
+  },
+  "homepage": "https://github.com/Anilk1sagar/as-button#README",
+  "peerDependencies": {
     "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
@@ -29,9 +45,9 @@
     "@angular/cli": "~7.1.3",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -40,6 +56,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^5.2.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
